experimental/parser/testdata/parser/def/prefixes.proto.stderr.txt
error: unexpected `optional` modifier on message definition
  --> testdata/parser/def/prefixes.proto:5:1
   |
 5 | optional message Foo {
   | ^^^^^^^^
  help: delete it
   |
 5 | - optional message Foo {
 5 | + message Foo {
   |
   = help: `optional` only applies to a message field

error: unexpected `option` modifier on message field
  --> testdata/parser/def/prefixes.proto:7:5
   |
 7 |     option option y = 2;
   |     ^^^^^^
  help: replace with `optional`
   |
 7 | -     option option y = 2;
 7 | +     optional option y = 2;
   |
   = help: `option` only applies to an import

warning: group syntax is deprecated
  --> testdata/parser/def/prefixes.proto:8:14
   |
 8 |     optional group foo = 10 {}
   |              ^^^^^
   = note: group syntax is not available in proto3 or editions

error: group names must start with an uppercase letter
  --> testdata/parser/def/prefixes.proto:8:20
   |
 8 |     optional group foo = 10 {}
   |                    ^^^

error: unexpected `stream` modifier on group definition
  --> testdata/parser/def/prefixes.proto:9:5
   |
 9 |     stream group foo = 10 {}
   |     ^^^^^^
  help: delete it
   |
 9 | -     stream group foo = 10 {}
 9 | +     group foo = 10 {}
   |
   = help: `stream` only applies to an input or output of a service method

warning: group syntax is deprecated
  --> testdata/parser/def/prefixes.proto:9:12
   |
 9 |     stream group foo = 10 {}
   |            ^^^^^
   = note: group syntax is not available in proto3 or editions

error: group names must start with an uppercase letter
  --> testdata/parser/def/prefixes.proto:9:18
   |
 9 |     stream group foo = 10 {}
   |                  ^^^

error: unexpected `export` modifier on message field
  --> testdata/parser/def/prefixes.proto:11:5
   |
11 |     export repeated int32 x = 1;
   |     ^^^^^^
  help: delete it
   |
11 | -     export repeated int32 x = 1;
11 | +     repeated int32 x = 1;
   |
   = help: `export` only applies to a type definition

error: multiple modifiers on message field type
  --> testdata/parser/def/prefixes.proto:11:12
   |
11 |     export repeated int32 x = 1;
   |     ------ ^^^^^^^^
   |      |
   |      previous one is here
   |
  help: delete it
   |
11 | -     export repeated int32 x = 1;
11 | +     export int32 x = 1;
   |

error: unexpected `repeated` modifier on oneof definition
  --> testdata/parser/def/prefixes.proto:13:5
   |
13 |     repeated oneof y {
   |     ^^^^^^^^
  help: delete it
   |
13 | -     repeated oneof y {
13 | +     oneof y {
   |
   = help: `repeated` only applies to a message field

error: unexpected `public` modifier on enum definition
  --> testdata/parser/def/prefixes.proto:17:1
   |
17 | public enum Bar {}
   | ^^^^^^
  help: replace with `export`
   |
17 | - public enum Bar {}
17 | + export Bar {}
   |
   = help: `public` only applies to an import

error: unexpected `stream` modifier on message extension block
  --> testdata/parser/def/prefixes.proto:19:1
   |
19 | stream extend Foo {
   | ^^^^^^
  help: delete it
   |
19 | - stream extend Foo {
19 | + extend Foo {
   |
   = help: `stream` only applies to an input or output of a service method

error: unexpected `weak` modifier on message field
  --> testdata/parser/def/prefixes.proto:20:5
   |
20 |     weak int32 z = 5;
   |     ^^^^
  help: delete it
   |
20 | -     weak int32 z = 5;
20 | +     int32 z = 5;
   |
   = help: `weak` only applies to an import

error: unexpected `required` modifier on service definition
  --> testdata/parser/def/prefixes.proto:23:1
   |
23 | required weak service Baz {
   | ^^^^^^^^
  help: delete it
   |
23 | - required weak service Baz {
23 | + weak service Baz {
   |
   = help: `required` only applies to a message field

error: unexpected `weak` modifier on service definition
  --> testdata/parser/def/prefixes.proto:23:10
   |
23 | required weak service Baz {
   |          ^^^^
  help: delete it
   |
23 | - required weak service Baz {
23 | + required service Baz {
   |
   = help: `weak` only applies to an import

error: unexpected `stream` modifier on service method
  --> testdata/parser/def/prefixes.proto:24:5
   |
24 |     stream rpc X(Foo) returns (stream Bar);
   |     ^^^^^^
  help: delete it
   |
24 | -     stream rpc X(Foo) returns (stream Bar);
24 | +     rpc X(Foo) returns (stream Bar);
   |
   = help: `stream` only applies to an input or output of a service method

encountered 14 errors and 2 warnings
